# multimodal-hackathon

./: .env.production.example  .gitignore  AGENTS.md  README.md  dev.sh  render.yaml  test_nova.py
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/agents/prep/: __init__.py  agent.py  tools.py
backend/agents/voice/: __init__.py  agent.py  tools.py
backend/assets/demo/: mock-patient-TKA-Donnelly.md
backend/assets/reference/: knee_corpus_compact.json
backend/cases/: __init__.py  bedrock.py  bootstrap.py  case_intake_extract.py  case_lifecycle.py  chart_extract.py  checklist.py  checklist_gen.py  checklist_mark.py  clinical_guard.py  dev_lock.py  external_research.py  intro_voice.py  llm.py  mode_controller.py  pipeline.py  prompts.py  provider_checks.py  search.py  server.py  session_sync.py  store.py  time_utils.py  types.py  utterance_intent.py  vapi_webhooks.py  voice_events.py  workers.py
backend/cases/storage/: __init__.py  insforge_repo.py
backend/cases/voice/: __init__.py  provider.py
backend/deploy/: Dockerfile.api
backend/docs/: PRODUCT.md
backend/scripts/: insforge_hipaa.sql  insforge_schema.sql  seed_demo_case.py  seed_insforge_demo.py  test_utterance_routing.py
backend/services/api/: main.py  patients.py
backend/shared/: __init__.py  bootstrap.py  indexer.py  paths.py  secrets.py  security.py  tools_library.py  tools_web.py  unsiloed.py
backend/shared/pubmed/: __init__.py  (+4 more)
backend/tests/: test_chart_extract.py  test_close_case.py  test_intro_voice.py  test_spoken_sanitize.py  test_voice_pipeline.py
(+96 files in other folders)
