[project]
name = "multimodal-backend"
version = "0.1.0"
description = "Scalpel backend — FastAPI + Vapi webhooks + Insforge storage"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50.0",
    "deepagents>=0.5.0",
    "langchain-openai>=0.3.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pypdf>=4.0.0",
    "moss>=1.4.0",
]
